// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot test: OfferCard component should render correctly 1`] = `
<article
  className="block__place-card place-card"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="block__image-wrapper place-card__image-wrapper"
  >
    <a
      href="#"
    >
      <img
        alt="Place photo"
        className="place-card__image"
        height="200"
        src="photo"
        width="260"
      />
    </a>
  </div>
  <div
    className="place-card__info"
  >
    <div
      className="place-card__price-wrapper"
    >
      <div
        className="place-card__price"
      >
        <b
          className="place-card__price-value"
        >
          €
          4
        </b>
        <span
          className="place-card__price-text"
        >
          / night
        </span>
      </div>
      <BookmarkButton
        blockClassName="place-card"
        isActive={false}
        isBig={false}
      />
    </div>
    <StarRating
      blockClassName="place-card"
      isValueShown={false}
      value={4}
    />
    <h2
      className="place-card__name"
    >
      <a
        href="#"
        onClick={[Function]}
      >
        Paper place
      </a>
    </h2>
    <p
      className="place-card__type"
    >
      Room
    </p>
  </div>
</article>
`;

exports[`snapshot test: OfferCard component should render premium mark 1`] = `
<article
  className="block__place-card place-card"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <PremiumMark
    blockClassName="place-card"
  />
  <div
    className="block__image-wrapper place-card__image-wrapper"
  >
    <a
      href="#"
    >
      <img
        alt="Place photo"
        className="place-card__image"
        height="200"
        src="photo"
        width="260"
      />
    </a>
  </div>
  <div
    className="place-card__info"
  >
    <div
      className="place-card__price-wrapper"
    >
      <div
        className="place-card__price"
      >
        <b
          className="place-card__price-value"
        >
          €
          4
        </b>
        <span
          className="place-card__price-text"
        >
          / night
        </span>
      </div>
      <BookmarkButton
        blockClassName="place-card"
        isActive={false}
        isBig={false}
      />
    </div>
    <StarRating
      blockClassName="place-card"
      isValueShown={false}
      value={4}
    />
    <h2
      className="place-card__name"
    >
      <a
        href="#"
        onClick={[Function]}
      >
        Paper place
      </a>
    </h2>
    <p
      className="place-card__type"
    >
      Room
    </p>
  </div>
</article>
`;
